
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_11__ TYPE_4__ ;
typedef struct TYPE_10__ TYPE_3__ ;
typedef struct TYPE_9__ TYPE_2__ ;
typedef struct TYPE_8__ TYPE_1__ ;


struct TYPE_8__ {scalar_t__ sndChunk; struct TYPE_8__* next; } ;
typedef TYPE_1__ sndBuffer ;
struct TYPE_9__ {TYPE_1__* soundData; } ;
typedef TYPE_2__ sfx_t ;
struct TYPE_10__ {int left; int right; } ;
typedef TYPE_3__ portable_samplepair_t ;
struct TYPE_11__ {int leftvol; int rightvol; float dopplerScale; int doppler; } ;
typedef TYPE_4__ channel_t ;
typedef size_t byte ;


 int SND_CHUNK_SIZE ;
 int* mulawToShort ;
 TYPE_3__* paintbuffer ;
 int snd_vol ;

void S_PaintChannelFromMuLaw( channel_t *ch, sfx_t *sc, int count, int sampleOffset, int bufferOffset ) {
 int data;
 int leftvol, rightvol;
 int i;
 portable_samplepair_t *samp;
 sndBuffer *chunk;
 byte *samples;
 float ooff;

 leftvol = ch->leftvol*snd_vol;
 rightvol = ch->rightvol*snd_vol;

 samp = &paintbuffer[ bufferOffset ];
 chunk = sc->soundData;
 while (sampleOffset>=(SND_CHUNK_SIZE*2)) {
  chunk = chunk->next;
  sampleOffset -= (SND_CHUNK_SIZE*2);
  if (!chunk) {
   chunk = sc->soundData;
  }
 }

 if (!ch->doppler) {
  samples = (byte *)chunk->sndChunk + sampleOffset;
  for ( i=0 ; i<count ; i++ ) {
   data = mulawToShort[*samples];
   samp[i].left += (data * leftvol)>>8;
   samp[i].right += (data * rightvol)>>8;
   samples++;
   if (chunk != ((void*)0) && samples == (byte *)chunk->sndChunk+(SND_CHUNK_SIZE*2)) {
    chunk = chunk->next;
    samples = (byte *)chunk->sndChunk;
   }
  }
 } else {
  ooff = sampleOffset;
  samples = (byte *)chunk->sndChunk;
  for ( i=0 ; i<count ; i++ ) {
   data = mulawToShort[samples[(int)(ooff)]];
   ooff = ooff + ch->dopplerScale;
   samp[i].left += (data * leftvol)>>8;
   samp[i].right += (data * rightvol)>>8;
   if (ooff >= SND_CHUNK_SIZE*2) {
    chunk = chunk->next;
    if (!chunk) {
     chunk = sc->soundData;
    }
    samples = (byte *)chunk->sndChunk;
    ooff = 0.0;
   }
  }
 }
}
