; ModuleID = '/home/carl/AnghaBench/lab/engine/code/client/extr_snd_mix.c_S_PaintChannelFromMuLaw.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/client/extr_snd_mix.c_S_PaintChannelFromMuLaw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32, i32 }
%struct.TYPE_11__ = type { i32, i32, float, i32 }
%struct.TYPE_9__ = type { %struct.TYPE_8__* }
%struct.TYPE_8__ = type { i64, %struct.TYPE_8__* }

@snd_vol = common dso_local global i32 0, align 4
@paintbuffer = common dso_local global %struct.TYPE_10__* null, align 8
@SND_CHUNK_SIZE = common dso_local global i32 0, align 4
@mulawToShort = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @S_PaintChannelFromMuLaw(%struct.TYPE_11__* %0, %struct.TYPE_9__* %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.TYPE_11__*, align 8
  %7 = alloca %struct.TYPE_9__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca %struct.TYPE_10__*, align 8
  %16 = alloca %struct.TYPE_8__*, align 8
  %17 = alloca i64*, align 8
  %18 = alloca float, align 4
  store %struct.TYPE_11__* %0, %struct.TYPE_11__** %6, align 8
  store %struct.TYPE_9__* %1, %struct.TYPE_9__** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %19 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %20 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load i32, i32* @snd_vol, align 4
  %23 = mul nsw i32 %21, %22
  store i32 %23, i32* %12, align 4
  %24 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %25 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 4
  %27 = load i32, i32* @snd_vol, align 4
  %28 = mul nsw i32 %26, %27
  store i32 %28, i32* %13, align 4
  %29 = load %struct.TYPE_10__*, %struct.TYPE_10__** @paintbuffer, align 8
  %30 = load i32, i32* %10, align 4
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %29, i64 %31
  store %struct.TYPE_10__* %32, %struct.TYPE_10__** %15, align 8
  %33 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %34 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %33, i32 0, i32 0
  %35 = load %struct.TYPE_8__*, %struct.TYPE_8__** %34, align 8
  store %struct.TYPE_8__* %35, %struct.TYPE_8__** %16, align 8
  br label %36

36:                                               ; preds = %55, %5
  %37 = load i32, i32* %9, align 4
  %38 = load i32, i32* @SND_CHUNK_SIZE, align 4
  %39 = mul nsw i32 %38, 2
  %40 = icmp sge i32 %37, %39
  br i1 %40, label %41, label %56

41:                                               ; preds = %36
  %42 = load %struct.TYPE_8__*, %struct.TYPE_8__** %16, align 8
  %43 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %42, i32 0, i32 1
  %44 = load %struct.TYPE_8__*, %struct.TYPE_8__** %43, align 8
  store %struct.TYPE_8__* %44, %struct.TYPE_8__** %16, align 8
  %45 = load i32, i32* @SND_CHUNK_SIZE, align 4
  %46 = mul nsw i32 %45, 2
  %47 = load i32, i32* %9, align 4
  %48 = sub nsw i32 %47, %46
  store i32 %48, i32* %9, align 4
  %49 = load %struct.TYPE_8__*, %struct.TYPE_8__** %16, align 8
  %50 = icmp ne %struct.TYPE_8__* %49, null
  br i1 %50, label %55, label %51

51:                                               ; preds = %41
  %52 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %53 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %52, i32 0, i32 0
  %54 = load %struct.TYPE_8__*, %struct.TYPE_8__** %53, align 8
  store %struct.TYPE_8__* %54, %struct.TYPE_8__** %16, align 8
  br label %55

55:                                               ; preds = %51, %41
  br label %36

56:                                               ; preds = %36
  %57 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %58 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %57, i32 0, i32 3
  %59 = load i32, i32* %58, align 4
  %60 = icmp ne i32 %59, 0
  br i1 %60, label %129, label %61

61:                                               ; preds = %56
  %62 = load %struct.TYPE_8__*, %struct.TYPE_8__** %16, align 8
  %63 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %62, i32 0, i32 0
  %64 = load i64, i64* %63, align 8
  %65 = inttoptr i64 %64 to i64*
  %66 = load i32, i32* %9, align 4
  %67 = sext i32 %66 to i64
  %68 = getelementptr inbounds i64, i64* %65, i64 %67
  store i64* %68, i64** %17, align 8
  store i32 0, i32* %14, align 4
  br label %69

69:                                               ; preds = %125, %61
  %70 = load i32, i32* %14, align 4
  %71 = load i32, i32* %8, align 4
  %72 = icmp slt i32 %70, %71
  br i1 %72, label %73, label %128

73:                                               ; preds = %69
  %74 = load i32*, i32** @mulawToShort, align 8
  %75 = load i64*, i64** %17, align 8
  %76 = load i64, i64* %75, align 8
  %77 = getelementptr inbounds i32, i32* %74, i64 %76
  %78 = load i32, i32* %77, align 4
  store i32 %78, i32* %11, align 4
  %79 = load i32, i32* %11, align 4
  %80 = load i32, i32* %12, align 4
  %81 = mul nsw i32 %79, %80
  %82 = ashr i32 %81, 8
  %83 = load %struct.TYPE_10__*, %struct.TYPE_10__** %15, align 8
  %84 = load i32, i32* %14, align 4
  %85 = sext i32 %84 to i64
  %86 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %83, i64 %85
  %87 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %86, i32 0, i32 0
  %88 = load i32, i32* %87, align 4
  %89 = add nsw i32 %88, %82
  store i32 %89, i32* %87, align 4
  %90 = load i32, i32* %11, align 4
  %91 = load i32, i32* %13, align 4
  %92 = mul nsw i32 %90, %91
  %93 = ashr i32 %92, 8
  %94 = load %struct.TYPE_10__*, %struct.TYPE_10__** %15, align 8
  %95 = load i32, i32* %14, align 4
  %96 = sext i32 %95 to i64
  %97 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %94, i64 %96
  %98 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %97, i32 0, i32 1
  %99 = load i32, i32* %98, align 4
  %100 = add nsw i32 %99, %93
  store i32 %100, i32* %98, align 4
  %101 = load i64*, i64** %17, align 8
  %102 = getelementptr inbounds i64, i64* %101, i32 1
  store i64* %102, i64** %17, align 8
  %103 = load %struct.TYPE_8__*, %struct.TYPE_8__** %16, align 8
  %104 = icmp ne %struct.TYPE_8__* %103, null
  br i1 %104, label %105, label %124

105:                                              ; preds = %73
  %106 = load i64*, i64** %17, align 8
  %107 = load %struct.TYPE_8__*, %struct.TYPE_8__** %16, align 8
  %108 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %107, i32 0, i32 0
  %109 = load i64, i64* %108, align 8
  %110 = inttoptr i64 %109 to i64*
  %111 = load i32, i32* @SND_CHUNK_SIZE, align 4
  %112 = mul nsw i32 %111, 2
  %113 = sext i32 %112 to i64
  %114 = getelementptr inbounds i64, i64* %110, i64 %113
  %115 = icmp eq i64* %106, %114
  br i1 %115, label %116, label %124

116:                                              ; preds = %105
  %117 = load %struct.TYPE_8__*, %struct.TYPE_8__** %16, align 8
  %118 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %117, i32 0, i32 1
  %119 = load %struct.TYPE_8__*, %struct.TYPE_8__** %118, align 8
  store %struct.TYPE_8__* %119, %struct.TYPE_8__** %16, align 8
  %120 = load %struct.TYPE_8__*, %struct.TYPE_8__** %16, align 8
  %121 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %120, i32 0, i32 0
  %122 = load i64, i64* %121, align 8
  %123 = inttoptr i64 %122 to i64*
  store i64* %123, i64** %17, align 8
  br label %124

124:                                              ; preds = %116, %105, %73
  br label %125

125:                                              ; preds = %124
  %126 = load i32, i32* %14, align 4
  %127 = add nsw i32 %126, 1
  store i32 %127, i32* %14, align 4
  br label %69

128:                                              ; preds = %69
  br label %202

129:                                              ; preds = %56
  %130 = load i32, i32* %9, align 4
  %131 = sitofp i32 %130 to float
  store float %131, float* %18, align 4
  %132 = load %struct.TYPE_8__*, %struct.TYPE_8__** %16, align 8
  %133 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %132, i32 0, i32 0
  %134 = load i64, i64* %133, align 8
  %135 = inttoptr i64 %134 to i64*
  store i64* %135, i64** %17, align 8
  store i32 0, i32* %14, align 4
  br label %136

136:                                              ; preds = %198, %129
  %137 = load i32, i32* %14, align 4
  %138 = load i32, i32* %8, align 4
  %139 = icmp slt i32 %137, %138
  br i1 %139, label %140, label %201

140:                                              ; preds = %136
  %141 = load i32*, i32** @mulawToShort, align 8
  %142 = load i64*, i64** %17, align 8
  %143 = load float, float* %18, align 4
  %144 = fptosi float %143 to i32
  %145 = sext i32 %144 to i64
  %146 = getelementptr inbounds i64, i64* %142, i64 %145
  %147 = load i64, i64* %146, align 8
  %148 = getelementptr inbounds i32, i32* %141, i64 %147
  %149 = load i32, i32* %148, align 4
  store i32 %149, i32* %11, align 4
  %150 = load float, float* %18, align 4
  %151 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %152 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %151, i32 0, i32 2
  %153 = load float, float* %152, align 4
  %154 = fadd float %150, %153
  store float %154, float* %18, align 4
  %155 = load i32, i32* %11, align 4
  %156 = load i32, i32* %12, align 4
  %157 = mul nsw i32 %155, %156
  %158 = ashr i32 %157, 8
  %159 = load %struct.TYPE_10__*, %struct.TYPE_10__** %15, align 8
  %160 = load i32, i32* %14, align 4
  %161 = sext i32 %160 to i64
  %162 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %159, i64 %161
  %163 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %162, i32 0, i32 0
  %164 = load i32, i32* %163, align 4
  %165 = add nsw i32 %164, %158
  store i32 %165, i32* %163, align 4
  %166 = load i32, i32* %11, align 4
  %167 = load i32, i32* %13, align 4
  %168 = mul nsw i32 %166, %167
  %169 = ashr i32 %168, 8
  %170 = load %struct.TYPE_10__*, %struct.TYPE_10__** %15, align 8
  %171 = load i32, i32* %14, align 4
  %172 = sext i32 %171 to i64
  %173 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %170, i64 %172
  %174 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %173, i32 0, i32 1
  %175 = load i32, i32* %174, align 4
  %176 = add nsw i32 %175, %169
  store i32 %176, i32* %174, align 4
  %177 = load float, float* %18, align 4
  %178 = load i32, i32* @SND_CHUNK_SIZE, align 4
  %179 = mul nsw i32 %178, 2
  %180 = sitofp i32 %179 to float
  %181 = fcmp oge float %177, %180
  br i1 %181, label %182, label %197

182:                                              ; preds = %140
  %183 = load %struct.TYPE_8__*, %struct.TYPE_8__** %16, align 8
  %184 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %183, i32 0, i32 1
  %185 = load %struct.TYPE_8__*, %struct.TYPE_8__** %184, align 8
  store %struct.TYPE_8__* %185, %struct.TYPE_8__** %16, align 8
  %186 = load %struct.TYPE_8__*, %struct.TYPE_8__** %16, align 8
  %187 = icmp ne %struct.TYPE_8__* %186, null
  br i1 %187, label %192, label %188

188:                                              ; preds = %182
  %189 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %190 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %189, i32 0, i32 0
  %191 = load %struct.TYPE_8__*, %struct.TYPE_8__** %190, align 8
  store %struct.TYPE_8__* %191, %struct.TYPE_8__** %16, align 8
  br label %192

192:                                              ; preds = %188, %182
  %193 = load %struct.TYPE_8__*, %struct.TYPE_8__** %16, align 8
  %194 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %193, i32 0, i32 0
  %195 = load i64, i64* %194, align 8
  %196 = inttoptr i64 %195 to i64*
  store i64* %196, i64** %17, align 8
  store float 0.000000e+00, float* %18, align 4
  br label %197

197:                                              ; preds = %192, %140
  br label %198

198:                                              ; preds = %197
  %199 = load i32, i32* %14, align 4
  %200 = add nsw i32 %199, 1
  store i32 %200, i32* %14, align 4
  br label %136

201:                                              ; preds = %136
  br label %202

202:                                              ; preds = %201, %128
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
